# dotsboxes

./: .gitignore  README.md  docker-compose.yml  dotsboxes-deploy.yaml  environment.yml  export_env.sh  make_package  requirements.txt  settings.gradle  setup.cfg  setup.py  test_cov.sh  tox.ini
.github/workflows/: ci.yml  python-app.yml
auth-service/: build.gradle
auth-service/src/main/resources/: application.properties  application.yml
core/: build.gradle
core/src/main/proto/: dotsboxes.proto
core/src/main/resources/: ErrorMessages.properties
dbcli/: build.gradle
deployment/: .gitignore  create-local-dynamodb-schema.py  dotsboxes-dynamodb.yaml  requirements.txt  validate.sh
dynamodb/: build.gradle
dynamodb-test/: build.gradle
dynamodb/src/main/resources/: application-create-db.properties
dynamodb/src/test/resources/: application.yml
events-service/: build.gradle
events-service/src/main/resources/: application.properties
events-service/src/test/resources/: application.properties
frontend/: index.html
frontend/game/: .nvmrc  game-client.js  game.js  index.html  local.config.js  package-lock.json  package.json  production.config.js  vite.config.js
frontend/game/public/: default_theme.css  dotsboxes.proto  dotsboxes_service.proto
game-interface/: build.gradle
game-service/: build.gradle
lobby-service/: build.gradle
nginx/: default.conf
src/dotsboxes/: board.py  game.py
src/dotsquares/: __init__.py  board.py  game.py
src/lambda/: dslambda.py
tests/: test_board.py  test_game.py
web/: build.gradle
(+123 files in other folders)
