[metadata]
name = dotsquares
version = 1.0.dev1
author = Jimmy Hutson
author_email = jimmy@hutsonandfriends.com
description = Dots and Squares Game
long_description = file: README.md
long_description_content_type = text/markdown
keywords = game, dots, squares
license = GNU General Public License v3 (GPLv3)
license_files = LICENSE.txt
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment

[options]
python_requires = >=3
install_requires =
    numpy
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
